--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -32,6 +32,7 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
+          registry: ghcr.io
           platforms: linux/amd64
           push: true
           tags: |
