--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -32,10 +32,9 @@ jobs:
         id: docker_build
         uses: docker/build-push-action@v2
         with:
-          registry: ghcr.io
           platforms: linux/amd64
           push: true
           tags: |
-            ${{env.IMAGE_NAME}}:${{github.sha}}
-            ${{env.IMAGE_NAME}}:0.0.${{github.run_number}}
-            ${{env.IMAGE_NAME}}:snapshot
+            ghcr.io/${{env.IMAGE_NAME}}:${{github.sha}}
+            ghcr.io/${{env.IMAGE_NAME}}:0.0.${{github.run_number}}
+            ghcr.io/${{env.IMAGE_NAME}}:snapshot
